--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>JavaScript &amp; jQuery - Chapter 2: Basic JavaScript Instructions - Example</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <h1>Elderflower</h1>
@@ -31,6 +31,6 @@
   </table>
   <a href="#" class="action">Pay Now</a>
 </div>
-  <script src="../js/index.js"></script>
+  <script src="js/index.js"></script>
 </body>        
 </html>        
